force-app/main/default/objects/Care_Plan__c/fields/Animal_Episode__c.field-meta.xml
<CustomField>
    <fullName>Animal_Episode__c</fullName>
    <description>Episode that owns the care plan.</description>
    <label>Animal Episode</label>
    <referenceTo>Animal_Episode__c</referenceTo>
    <relationshipLabel>Care Plans</relationshipLabel>
    <relationshipName>Care_Plans</relationshipName>
    <type>MasterDetail</type>
</CustomField>