force-app/main/default/objects/Care_Plan__c/fields/Auto_Created__c.field-meta.xml
<CustomField>
    <fullName>Auto_Created__c</fullName>
    <description
  >Indicates whether the plan was created by automation.</description>
    <label>Auto Created</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>