force-app/main/default/objects/Care_Plan__c/fields/Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_User__c</fullName>
    <description>User accountable for progressing the care plan.</description>
    <label>Owner User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Care Plans</relationshipLabel>
    <relationshipName>Care_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>