force-app/main/default/objects/Care_Plan__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <description>Type of intervention plan being created.</description>
    <label>Plan Type</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Behaviour</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Husbandry</fullName>
            </value>
            <value>
                <fullName>Enrichment</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>