force-app/main/default/objects/Care_Plan__c/fields/Primary_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Primary_Assessment__c</fullName>
    <description
  >Assessment that triggered or primarily supports the care plan.</description>
    <label>Primary Assessment</label>
    <referenceTo>Welfare_Assessment__c</referenceTo>
    <relationshipLabel>Care Plans</relationshipLabel>
    <relationshipName>Care_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>