force-app/main/default/objects/Care_Plan__c/fields/Primary_Goal__c.field-meta.xml
<CustomField>
    <fullName>Primary_Goal__c</fullName>
    <description>Primary goal for the plan.</description>
    <label>Primary Goal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>