force-app/main/default/objects/Care_Plan__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date for the plan.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>