force-app/main/default/objects/Care_Plan__c/fields/Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Success_Criteria__c</fullName>
    <description>Criteria that define plan success.</description>
    <label>Success Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>