force-app/main/default/objects/Care_Plan__c/fields/Target_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Review_Date__c</fullName>
    <description
  >Review date by which the plan should be reassessed.</description>
    <label>Target Review Date</label>
    <type>Date</type>
</CustomField>